--- a/text_recognition/crnn_pytorch/requirements.txt
+++ b/text_recognition/crnn_pytorch/requirements.txt
@@ -6,9 +6,15 @@
 #
 docopt==0.6.2             # via -r requirements.in
 numpy==1.17.2             # via -r requirements.in, opencv-python, scipy, torch
-opencv-python==4.4.0.42   # via -r requirements.in
-pillow==6.1.0             # via -r requirements.in
-scipy==1.5.2              # via -r requirements.in
+opencv-python==4.6.0.66   # via -r requirements.in
+pillow==8.4.0             # via -r requirements.in
+scipy==1.5.4              # via -r requirements.in
 six==1.12.0               # via -r requirements.in
-torch==1.2.0              # via -r requirements.in
-tqdm==4.49.0              # via -r requirements.in
+torch==1.10.2              # via -r requirements.in
+tqdm==4.64.0              # via -r requirements.in
+dataclasses         0.8
+importlib-resources 5.4.0
+pip                 21.3.1
+setuptools          40.6.2
+typing_extensions   4.1.1
+zipp                3.6.0
