minor fixes on requirements.txt

--- a/text_recognition/ABINet/requirements.txt
+++ b/text_recognition/ABINet/requirements.txt
@@ -1,7 +1,59 @@
+beautifulsoup4==4.11.1
+blis==0.7.8
+Bottleneck==1.3.5
+catalogue==2.0.8
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+cycler==0.11.0
+cymem==2.0.6
+editdistance==0.6.0
+fastai==1.0.60
+fastprogress==1.0.3
+fonttools==4.34.4
+idna==3.3
+importlib-metadata==4.12.0
+Jinja2==3.1.2
+kiwisolver==1.4.4
+langcodes==3.3.0
+lmdb==1.3.0
+MarkupSafe==2.1.1
+matplotlib==3.5.3
+murmurhash==1.0.7
+numexpr==2.8.3
+numpy==1.21.6
+nvidia-ml-py3==7.352.0
+opencv-python==4.6.0.66
+packaging==21.3
+pandas==1.3.5
+pathy==0.6.2
+Pillow==6.2.2
+Pillow-SIMD==6.2.2.post1
+pip==22.2.2
+preshed==3.0.6
+protobuf==3.20.1
+pydantic==1.9.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+PyYAML==6.0
+requests==2.28.1
+scipy==1.7.3
+setuptools==41.2.0
+six==1.16.0
+smart-open==5.2.1
+soupsieve==2.3.2.post1
+spacy==3.4.1
+spacy-legacy==3.0.9
+spacy-loggers==1.0.3
+srsly==2.4.4
+tensorboardX==2.5.1
+thinc==8.1.0
 torch==1.1.0
 torchvision==0.3.0
-fastai==1.0.60
-LMDB
-Pillow
-opencv-python
-tensorboardX
+tqdm==4.64.0
+typer==0.4.2
+typing_extensions==4.1.1
+urllib3==1.26.11
+wasabi==0.10.1
+zipp==3.8.1
