--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,18 @@ services:
     volumes:
       - ./table_recognition:/code
     restart: always
+  text_detection:
+    build: text_detection/
+    ports:
+      - "${TEXT_DETECTION_PORT}:80"
+    volumes:
+      - ./text_detection:/code
+    restart: always
+  text_recognition:
+    build: text_recognition/
+    ports:
+      - "${TEXT_RECOGNITION_PORT}:80"
+    volumes:
+      - ./text_recognition:/code
+    restart: always
+ 
