--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,5 @@
 version: "3.9"
 services:
-  # table_detection:
-  #   build: table_detection/
-  #   ports:
-  #     - "${TABLE_DETECTION_PORT}:80"
-  #   volumes:
-  #     - ./table_detection:/code
-  #   restart: always
   table_recognition:
     build: table_recognition/
     ports:
@@ -14,13 +7,6 @@ services:
     volumes:
       - ./table_recognition:/code
     restart: always
-    #  text_detection:
-    #    build: text_detection/
-    #    ports:
-    #      - "${TEXT_DETECTION_PORT}:80"
-    #    volumes:
-    #      - ./text_detection:/code
-    #    restart: always
   text_recognition:
     build: text_recognition/
     runtime: nvidia
@@ -32,10 +18,8 @@ services:
   streamlit:
     build: streamlit/
     environment:
-      - TABLE_DETECTION_PORT="${TABLE_DETECTION_PORT}"
-      - TABLE_RECOGNITION_PORT="${TABLE_RECOGNITION_PORT}"
-      - TEXT_DETECTION_PORT="${TEXT_DETECTION_PORT}"
-      - TEXT_RECOGNITION_PORT="${TEXT_RECOGNITION_PORT}"
+      - TABLE_RECOGNITION_PORT=${TABLE_RECOGNITION_PORT}
+      - TEXT_RECOGNITION_PORT=${TEXT_RECOGNITION_PORT}
     ports:
       - "${APP}:8501"
     volumes:
