--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10
 
 WORKDIR /code
 
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6 -y
+
 COPY requirements.txt /code
 RUN pip install -r requirements.txt
 
