--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   table_recognition:
     build: table_recognition/
@@ -9,7 +8,7 @@ services:
     restart: always
   text_recognition:
     build: text_recognition/
-    runtime: nvidia
+    # runtime: nvidia
     ports:
       - "${TEXT_RECOGNITION_PORT}:80"
     volumes:
