--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Clean up unused Docker resources
+      run: |
+        docker system prune -af
+        docker volume prune -f
     - name: Build the Docker image
       run: docker compose build
