--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     restart: always
   text_recognition:
     build: text_recognition/
-    runtime: nvidia
+    #runtime: nvidia
     ports:
       - "${TEXT_RECOGNITION_PORT}:80"
     volumes:
